# routes/index.js
@@ -2,6 +2,7 @@ import { Router } from 'express';
 import swaggerRoutes from './swagger.js';
 import usersRoutes from './users.routes.js';
 import animalsRoutes from './animals.routes.js';
+import passport from 'passport';
 
 const router = Router();
 
@@ -13,5 +14,14 @@ router.get('/', (req, res) => {
 router.use('/users', usersRoutes);
 router.use('/animals', animalsRoutes);
 router.use('/api-docs', swaggerRoutes);
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', (req, res, next) => {
+  req.logout(err => {
+    if (err) return next(err);
+    res.redirect('/');
+  });
+});
 
 export default router;
